  * For automatic installs, set debian-installer/country to a country
    matching time/zone when starting up the timezone plugin, since its
    ok_handler will typically never be called (LP: #1098577).
  * Save a random seed to the installed system so that it has better entropy
    on first boot (LP: #1098299).
  * Update translations from Launchpad (LP: #1096923).

  [ Iain Lane ]
  * Port the webcam support to GStreamer 1.0.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 11 Jan 2013 17:17:27 +0000

ubiquity (2.13.9) raring; urgency=low

  [ Luke Yelavich ]
  * bin/ubiquity-dm, ubiquity/frontend/gtk_ui.py: Remove a non-existant
    command-line flag from Orca calls.

  [ Kent Baxley ]
  * Hide the back button at the beginning of oem-config (LP: #1095692).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 10 Jan 2013 11:58:23 +0000

ubiquity (2.13.8) raring; urgency=low

  [ Colin Watson ]
  * Honour base-installer/kernel/altmeta when deciding which kernels to
    install or keep installed.

  [ Dmitrijs Ledkovs ]
  * Moving question dialog to use a glade ui file, made it non
    "re-entrant" safe, i.e. it started to remember previous action area
    buttons. The fix is to clear action area, all other parts of the
    dialog are always reset with something fresh. (LP: #1087823)
  * ubiquity-dm: compiz actually doesn't have bg-image.
  * ubi-partman: Do not allow to select encryption without lvm
    (LP: #1093957).
  * Automatic update of included source packages: debian-installer-utils
    1.94ubuntu1, flash-kernel 3.0~rc.4ubuntu29, localechooser
    2.49ubuntu1, netcfg 1.68ubuntu17, partman-auto 105ubuntu2, partman-
    auto-lvm 46ubuntu2, partman-base 163ubuntu1, partman-ext3 74ubuntu1,
    partman-jfs 38, partman-partitioning 89ubuntu1, partman-target
    80ubuntu1, preseed 1.57ubuntu2, user-setup 1.47ubuntu1.

  [ Scott Kitterman ]
  * Change encrypt home question to checkbox and indent it under the login