@@ -87,9 +87,10 @@ valid_commands = {
 
 
 class DebconfFilter:
-    def __init__(self, db, widgets={}):
+    def __init__(self, db, widgets={}, automatic=False):
         self.db = db
         self.widgets = widgets
+        self.automatic = automatic
         if 'DEBCONF_DEBUG' in os.environ:
             self.debug_re = re.compile(os.environ['DEBCONF_DEBUG'])
         else:
@@ -276,7 +277,7 @@ class DebconfFilter:
             input_widgets = self.find_widgets([question])
 
             if len(input_widgets) > 0:
-                if 'UBIQUITY_AUTOMATIC' in os.environ:
+                if self.automatic:
                     if self.db.fget(question, 'seen') == 'true':
                         self.reply(30, 'question skipped', log=True)
                         self.next_go_backup = False
