@@ -40,7 +40,7 @@ class PageGtk(PageBase):
     plugin_title = 'ubiquity/text/warning_heading_label'
 
     def __init__(self, controller, *args, **kwargs):
-        if 'UBIQUITY_AUTOMATIC' in os.environ:
+        if self.is_automatic:
             self.page = None
             return
         self.controller = controller
